# dwarf-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  readme.md
.sqlx/: query-0b7cfd6fb4ac4847402a51f423c337d6561466c580bb2f6cccdb63fa44189a15.json  query-31e68564daa2b6a3b556a7b7661c3a3487867c83753e6e94f8c3362752c0935d.json  query-8494f84da4ff669ba4fd2f7b681735f5a730a41dc481ec475c2825af29fa586f.json  query-cb1765d95dcf23c7a81bfbc0d1210c118eeaee6d7c34c33279987847c025e04c.json
migrations/: 20250117093958_create_urls.down.sql  20250117093958_create_urls.up.sql
src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs  utils.rs
tests/: integration_tests.rs
tests/helpers/: test_database.rs
