[package]
name = "dwarf-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"]}
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
